--- a/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_09375.cfg
@@ -22,8 +22,8 @@ PART
 	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
 	sound_vent_large = deploy
 	
-	TechRequired = stability
-	entryCost = 3000
+	TechRequired = basicRocketry
+	entryCost = 300
 	cost = 300
 	category = Payload
 	subcategory = 0
