--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_FuelTank_Long_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_FuelTank_Long_0625.cfg
@@ -20,8 +20,8 @@ PART
 	node_stack_bottom = 0.0, -0.915, 0.0, 0.0, -1.0, 0.0, 0
 	node_attach = 0.3125, 0.0, 0.0, 1.0, 0.0, 0.0
 	
-	TechRequired = propulsionSystems
-	entryCost = 2200
+	TechRequired = basicRocketry
+	entryCost = 200
 	cost = 120
 	category = FuelTank
 	subcategory = 0
