--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
@@ -25,8 +25,8 @@ PART
 	bulkheadProfiles = size0p5
 	attachRules = 1,1,1,1,0
 
-	TechRequired = flightControl
-	entryCost = 2800
+	TechRequired = basicRocketry
+	entryCost = 300
 	cost = 250
 	category     = Pods
 	subcategory  = 0
