--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
@@ -25,8 +25,8 @@ PART
 	bulkheadProfiles = size0
 	attachRules = 1,1,1,1,0
 
-	TechRequired = stability
-	entryCost = 2800
+	TechRequired = basicRocketry
+	entryCost = 200
 	cost = 250
 	category     = Pods
 	subcategory  = 0
