--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
@@ -21,8 +21,8 @@ PART
 	bulkheadProfiles = srf	
 	attachRules = 0,1,0,1,0
 	
-	TechRequired = stability
-	entryCost = 800
+	TechRequired = basicRocketry
+	entryCost = 220
 	cost = 100
 	category = Aero
 	subcategory = 0
@@ -59,7 +59,7 @@ PART
 	MODULE
 	{
 		name = ModuleGimbal
-		gimbalResponseSpeed = 15
+		gimbalResponseSpeed = 5
 		useGimbalResponseSpeed = true
 		gimbalTransformName = thrustTransform
 		gimbalRange = 8
