--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
@@ -27,8 +27,8 @@ PART
 
 	attachRules = 1,0,1,1,0
 
-	TechRequired = engineering101
-	entryCost = 300
+	TechRequired = basicRocketry
+	entryCost = 200
 	cost = 70
 
 	category = Coupling
