--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_09375.cfg
@@ -24,8 +24,8 @@ PART
 
 	attachRules = 1,1,1,1,0
 
-	TechRequired = stability
-	entryCost = 300
+	TechRequired = basicRocketry
+	entryCost = 200
 	cost = 120
 
 	category = Payload
