--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_NoseCone_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_NoseCone_09375.cfg
@@ -21,8 +21,8 @@ PART
 	node_attach       = 0.0,  0.0, 0.46875, 0.0,  0.0, -1.0
 	
 	bulkheadProfiles = size0p5	
-	TechRequired = stability
-	entryCost = 1500
+	TechRequired = basicRocketry
+	entryCost = 250
 	cost = 180
 	category = Aero
 	subcategory = 0
