--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_H2_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_H2_Engine_09375.cfg
@@ -23,8 +23,8 @@ PART
     bulkheadProfiles = size0p5
     attachRules = 1,1,1,1,0
 	
-	TechRequired = propulsionSystems
-    entryCost = 1300
+	TechRequired = basicRocketry
+    entryCost = 280
     cost = 680
 
     category     = Propulsion
