--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_H3_Engine_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_H3_Engine_0625.cfg
@@ -23,8 +23,8 @@ PART
     bulkheadProfiles = size0
     attachRules = 1,1,1,1,0
 	
-	TechRequired = propulsionSystems
-    entryCost = 1200
+	TechRequired = basicRocketry
+    entryCost = 240
     cost = 550
 
     category     = Propulsion
