--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_roll.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_roll.cfg
@@ -21,7 +21,7 @@ PART
 	bulkheadProfiles = srf	
 	attachRules = 0,1,0,1,0
 	
-	TechRequired = stability
+	TechRequired = basicRocketry
 	entryCost = 200
 	cost = 20
 	category = Control
