--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
@@ -21,8 +21,8 @@ PART
 	bulkheadProfiles = srf	
 	attachRules = 0,1,0,1,0
 	
-	TechRequired = stability
-	entryCost = 200
+	TechRequired = basicRocketry
+	entryCost = 120
 	cost = 10
 	category = FuelTank
 	subcategory = 0
