--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
@@ -21,8 +21,8 @@ PART
 	bulkheadProfiles = srf	
 	attachRules = 0,1,0,1,0
 	
-	TechRequired = aviation
-	entryCost = 800
+	TechRequired = start
+	entryCost = 0
 	cost = 90
 	category = Aero
 	subcategory = 0
