--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
@@ -28,8 +28,8 @@ PART
 	sound_parachute_open = activate
 	sound_parachute_single = deploy	
 	
-	TechRequired = survivability
-	entryCost = 200
+	TechRequired = start
+	entryCost = 0
 	cost = 400
 	category = Utility
 	subcategory = 0
