--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_1.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_1.cfg
@@ -23,8 +23,8 @@ PART
         
     attachRules = 1,0,1,1,0
 
-	TechRequired = advRocketry
-    entryCost = 1100
+	TechRequired = generalRocketry
+    entryCost = 550
     cost = 600
 
     category     = Propulsion
