--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
@@ -19,8 +19,8 @@ PART
 	node_attach = 0.0, 0.0, 0.1, 0.0, 0.0, -1.0
 	attachRules = 0,1,0,0,0
 	
-    TechRequired = generalRocketry
-	entryCost = 1100
+    TechRequired = basicRocketry
+	entryCost = 250
 	cost = 75
 	category = Engine
 	subcategory = 0
