--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_Rita2_9375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_Rita2_9375.cfg
@@ -23,8 +23,8 @@ PART
     bulkheadProfiles = size0p5
     attachRules = 1,1,1,1,0
 	
-    TechRequired = generalRocketry
-    entryCost = 900
+    TechRequired = basicRocketry
+    entryCost = 200
     cost = 420
 
     category     = Propulsion
