--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Small_Cryo_FuelTank_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Small_Cryo_FuelTank_09375.cfg
@@ -24,8 +24,8 @@ PART
 
 	attachRules = 1,1,1,1,0
 
-    TechRequired = generalRocketry
-	entryCost = 1500
+    TechRequired = basicRocketry
+	entryCost = 500
 	cost = 200
 
 	category = FuelTank
