--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
@@ -18,8 +18,8 @@ PART
 	
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 	
-	TechRequired = survivability
-	entryCost = 1000
+	TechRequired = start
+	entryCost = 0
 	cost = 80
 	category = Aero
 	subcategory = 0
