--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_CatPod_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_CatPod_03125.cfg
@@ -25,8 +25,8 @@ PART
 	bulkheadProfiles = size00
 	attachRules = 1,1,1,1,0
 	
-	TechRequired = basicScience
-	entryCost = 250
+	TechRequired = start
+	entryCost = 0
 	cost = 400
 	category = Science
 	subcategory = 0
