--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Adapter_125_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Adapter_125_09375.cfg
@@ -19,8 +19,8 @@ PART
 	node_stack_top = 0.0, 0.34384, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom = 0.0, -0.34384, 0.0, 0.0, -1.0, 0.0, 0
 	
-	TechRequired = generalConstruction
-	entryCost = 4400
+	TechRequired = generalRocketry
+	entryCost = 400
 	cost = 150
 	category = Structural
 	subcategory = 0
