--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Adapter_1875_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Adapter_1875_125.cfg
@@ -19,8 +19,8 @@ PART
 	node_stack_top = 0.0, 0.65469, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.71719, 0.0, 0.0, -1.0, 0.0, 1
 	
-	TechRequired = generalConstruction
-	entryCost = 4400
+	TechRequired = generalRocketry
+	entryCost = 550
 	cost = 150
 	category = Structural
 	subcategory = 0
