--- a/GameData/Knes/Parts/Core/Parachute/_Knes_Mainchute_srf.cfg
+++ b/GameData/Knes/Parts/Core/Parachute/_Knes_Mainchute_srf.cfg
@@ -5,23 +5,24 @@
 PART
 {
 
-	name = Knes_Paraglider_srf
+	name = Knes_Mainchute_srf
 	module = Part
 	author = Well
 
 	MODEL
 	{
-		model = Knes/Parts/Core/Parachute/Paraglider_srf
+		model = Knes/Parts/Core/Parachute/Mainchute_srf
 	}
 	
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0	
+	node_attach = 0.0, -0.01, 0.0, 0.0, -1.0, 0.0	
 	
 	attachRules = 1,1,1,1,0
 	
 	buoyancyUseCubeNamed = PACKED
+	bulkheadProfiles = srf
 
 	sound_parachute_open = activate
 	sound_parachute_single = deploy
@@ -32,13 +33,13 @@ PART
 
 	category     = Utility
 	subcategory  = 0
-	title        = Paraglider "Icarus"
+	title        = MainChute "Vega"
 	manufacturer = Knes
-	description  = The "Icarus" Parachute might be considered by some to be little more than a random stitching together of the surplus parts it is, in fact, made from. A generally better alternative to being in freefall.
+	description  = The "Vega" Parachute might be considered by some to be little more than a random stitching together of the surplus parts it is, in fact, made from. A generally better alternative to being in freefall.
 
-	tags = Knes chute parachute srf stack paraglider ixv StarRider
+	tags = Knes chute parachute srf stack
 
-	mass = 0.08
+	mass = 0.05
 	
 	bodyLiftMultiplier = 0	
 	dragModelType  = default
@@ -49,7 +50,7 @@ PART
 	breakingForce = 100
 	breakingTorque = 50	
 	bodyLiftMultiplier = 0
-	bulkheadProfiles = srf
+
 	stageOffset = -1
 	preferredStage = PARACHUTESTAGE
 
@@ -58,31 +59,32 @@ PART
 		name = ModuleParachute
 		semiDeployedAnimation = Paraglider_semiDeploySmall
 		fullyDeployedAnimation = Paraglider_fullyDeploySmall
-		invertCanopy = False
+		invertCanopy = true
 		autoCutSpeed = 0.5
 		capName = cap
 		canopyName = canopy
-		stowedDrag = 0.20
+		stowedDrag = 0.22
 		semiDeployedDrag = 1
-		fullyDeployedDrag = 2000
+		fullyDeployedDrag = 500
 		minAirPressureToOpen = 0.04
+		clampMinAirPressure = 0.04		
 		deployAltitude = 1000
-		deploymentSpeed = 0.125
+		deploymentSpeed = 0.12
 		semiDeploymentSpeed = 0.5
-		chuteMaxTemp = 950	
+		chuteMaxTemp = 750	
 	}
 
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 1.0
+		dragModifier = 1
 	}
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 30
+		dragModifier = 58
 	}
 	MODULE
 	{
@@ -112,6 +114,6 @@ PART
 	MODULE
 	{
 		name = ModuleCargoPart
-		packedVolume = 10
+		packedVolume = 20
 	}	
 }
