--- a/GameData/Knes/Parts/Core/Adapters/_Knes_Utility_SafeSystem_250.cfg
+++ b/GameData/Knes/Parts/Core/Adapters/_Knes_Utility_SafeSystem_250.cfg
@@ -30,9 +30,9 @@ PART
 	sound_explosion_low = flameout
 	
 	buoyancy = 0.375
-	TechRequired = advAerodynamics
-	entryCost = 8800
-	cost = 2600
+	TechRequired = advFlightControl
+	entryCost = 1800
+	cost = 2200
 	category = Utility
 	subcategory = 0
 	title = SafeSystem 1.875 / 1.25 Abort Adapter
