--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_EAP.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_EAP.cfg
@@ -30,7 +30,7 @@ PART
 	sound_vent_soft = disengage
 	sound_explosion_low = flameout
 	
-	TechRequired = heavyRocketry
+	TechRequired = heavierRocketry
 	entryCost = 2500
 	cost = 7500
 	category = Engine
