--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM4_Engine_125.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM4_Engine_125.cfg
@@ -23,7 +23,7 @@ PART
     bulkheadProfiles = size1
     attachRules = 1,1,1,1,0
 	
-	TechRequired = propulsionSystems
+	TechRequired = generalRocketry
     entryCost = 1200
     cost = 580
 
