--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
@@ -24,7 +24,7 @@ PART
         
     attachRules = 1,1,1,1,0
 
-    TechRequired = heavierRocketry
+    TechRequired = heavyRocketry
     entryCost = 1200
     cost = 8800
 
