--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
@@ -33,7 +33,7 @@ PART
 	breakingTorque = 100
 
 // --- editor parameters ---
-	TechRequired = aviation
+	TechRequired = aerodynamicSystems
 	entryCost = 11000
 	cost = 4000
 	category = Pods
