--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Skid.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Skid.cfg
@@ -17,7 +17,7 @@ PART
 	rescaleFactor = 1.0
 	
 	node_attach = 0.00, 0.00, 0.00, 0.0, 0.0, 1.0, 1
-	TechRequired = aviation
+	TechRequired = aerodynamicSystems
 	entryCost = 1800
 	cost = 350
 	category = Ground
