--- a/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
@@ -34,7 +34,7 @@ PART
 	breakingTorque = 100
 
 // --- editor parameters ---
-	TechRequired = aerodynamicSystems
+	TechRequired = advAerodynamics
 	entryCost = 11000
 	cost = 4000
 	category = Pods
