--- a/GameData/Knes/Parts/Spacecraft/_Knes_DockingPortJr_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_DockingPortJr_0625.cfg
@@ -20,9 +20,9 @@ PART
 	node_stack_top = 0.0, 0.1, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.025, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
-	TechRequired = advConstruction
+	TechRequired = generalConstruction
 	entryCost = 1800
-	cost = 850
+	cost = 450
 	category = Coupling
 	subcategory = 0
 	title = K06 "Arcas" Docking Port Jr.
