--- a/GameData/Knes/Parts/Core/Adapters/_Knes_Utility_SafeSystem_1875.cfg
+++ b/GameData/Knes/Parts/Core/Adapters/_Knes_Utility_SafeSystem_1875.cfg
@@ -30,8 +30,8 @@ PART
 	sound_explosion_low = flameout
 	
 	buoyancy = 0.375
-	TechRequired = aerodynamicSystems
-	entryCost = 6800
+	TechRequired = flightControl
+	entryCost = 1800
 	cost = 1800
 	category = Utility
 	subcategory = 0
