--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_P35.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_P35.cfg
@@ -30,7 +30,7 @@ PART
 	sound_vent_soft = disengage
 	sound_explosion_low = flameout
 	
-	TechRequired = basicRocketry
+	TechRequired = advRocketry
 	entryCost = 800
 	cost = 400
 	category = Engine
