--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_Gear.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_Gear.cfg
@@ -17,8 +17,8 @@ PART
 	rescaleFactor = 0.45
 	node_attach = 0.00, 0.00, 0.00, 0.0, 1.0, 0.0, 0
 	node_top = 0.00, 0.00, 0.00, 0.0, 1.0, 0.0, 0
-	TechRequired = advLanding
-	entryCost = 4200
+	TechRequired = aviation
+	entryCost = 1200
 	cost = 500
 	category = Ground
 	subcategory = 0
