--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
@@ -34,7 +34,7 @@
 	node_stack_bay1   = 0.0,  2.04783,  0.0,   0.0, -1.0,  0.0, 1
 	node_stack_bay2   = 0.0, -1.32345,  0.0,   0.0,  1.0,  0.0, 1	
 	
-	TechRequired = supersonicFlight
+	TechRequired = aviation
 	entryCost = 22000
 	cost = 12500
 	category = Pods
