--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Adapter_s1875.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Adapter_s1875.cfg
@@ -35,7 +35,7 @@ PART
 	sound_vent_large = decouple
 	
 	buoyancy = 0.375
-	TechRequired = supersonicFlight
+	TechRequired = aviation
 	entryCost = 2800
 	cost = 800
 	category = Coupling
