--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Elevon.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Elevon.cfg
@@ -21,7 +21,7 @@
 	CoLOffset = 0, -0.3296936, 0
 	CoPOffset = 0, -0.3296936, 0
 	
-	TechRequired = supersonicFlight
+	TechRequired = aviation
 	entryCost = 800
 	cost = 250
 	category = Aero
