--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
@@ -22,7 +22,7 @@
 	
     node_attach = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0
 	
-	TechRequired = supersonicFlight
+	TechRequired = aviation
 	entryCost = 1000
 	cost = 900
 	category = Aero
