--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
@@ -53,7 +53,7 @@ PART
 
 	attachRules = 1,1,1,1,0
 
-	TechRequired = supersonicFlight
+	TechRequired = generalConstruction
 	entryCost = 1200
 	cost = 500
 
