--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
@@ -22,7 +22,7 @@
 	
     node_attach = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0
 	
-	TechRequired = supersonicFlight
+	TechRequired = aviation
 	entryCost = 2000
 	cost = 1500
 	category = Aero
