--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
@@ -45,8 +45,8 @@ PART
 	maxTemp = 2800
 	explosionPotential = 0.1
 	fuelCrossFeed = True
-
-
+	physicalSignificance = NONE
+	
 	RESOURCE
 	{
 		name = MonoPropellant
