--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
@@ -45,7 +45,8 @@ PART
 	maxTemp = 2400
 	explosionPotential = 0.1
 	fuelCrossFeed = True
-
+	physicalSignificance = NONE
+	
 	MODULE
 	{
 		name = ModuleLiftingSurface
