--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
@@ -41,6 +41,7 @@ PART
 	explosionPotential = 0.1
 	fuelCrossFeed = True
 	bulkheadProfiles = srf
+	physicalSignificance = NONE	
 	tags = (air airbrake aircraft brake dive drag fligh landing plane slow speed spoil Knes Vesta Viska Veronique Varinka
 	
 	MODULE
