--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Antenna.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Antenna.cfg
@@ -33,7 +33,7 @@ PART
 	angularDrag = 2
 	crashTolerance = 7
 	maxTemp = 2000 // = 3000
-	PhysicsSignificance = 1
+	physicalSignificance = NONE	
 	bulkheadProfiles = size0, srf
 	tags = aerial antenna radio signal transmi MRK Knes
 	
