--- a/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
@@ -38,6 +38,8 @@ PART
 	maxTemp = 2000 // = 3400
 	bulkheadProfiles = size0, srf
 	tags = knes berth capture connect couple dock fasten join moor socket
+	physicalSignificance = NONE	
+	
 	MODULE
 	{
 		name = ModulePartVariants
