--- a/GameData/Knes/Parts/Core/Sat/_Knes_Flat_SolarPanel_NanoSat.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Flat_SolarPanel_NanoSat.cfg
@@ -35,7 +35,7 @@ PART
 	crashTolerance = 8
 	maxTemp = 1800
 	explosionPotential = 0
-	PhysicsSignificance = 1	
+	physicalSignificance = NONE	
 	bulkheadProfiles = srf
 	tags = knes array charge e/c elect energ fixed flat generat (light photo power solar static sun volt watt
 
