--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Separatron.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Separatron.cfg
@@ -40,7 +40,7 @@ PART
 	minimum_drag = 0.2
 	angularDrag = 2
 	crashTolerance = 7
-	maxTemp = 2000 // = 3600
+	maxTemp = 2600
 	ActivatesEvenIfDisconnected = true
 	stagingIcon = SOLID_BOOSTER
 	bulkheadProfiles = srf
