--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Thruster.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Thruster.cfg
@@ -32,7 +32,7 @@ PART
 	angularDrag = 2
 	crashTolerance = 15
 	maxTemp = 1500
-	PhysicsSignificance = 1
+	physicalSignificance = NONE
 	bulkheadProfiles = srf, size0
 	tags = cluster control dock maneuver manoeuvre react rendezvous rotate stab steer translate MRK Knes
 	
