Fix MRK Maxtemp

--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM.cfg
@@ -44,7 +44,7 @@ angularDrag = 0.75
 crashTolerance = 15
 breakingForce = 200
 breakingTorque = 200
-maxTemp = 2000 // =3400
+maxTemp = 2400
 fuelCrossFeed = True
 stagingIcon = DECOUPLER_VERT
 bulkheadProfiles = size1
