--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_LES.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_LES.cfg
@@ -39,7 +39,7 @@ PART
 	crashTolerance = 15
 	breakingForce = 200
 	breakingTorque = 200	
-	maxTemp = 2700 // = 3900
+	maxTemp = 2900
 	emissiveConstant = 0.95
 	stagingIcon = SOLID_BOOSTER
 	bulkheadProfiles = size1
