--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Parachute.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Parachute.cfg
@@ -43,7 +43,7 @@ PART
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
-	maxTemp = 2500 // = 3100
+	maxTemp = 2800
 	emissiveConstant = 0.7
 	breakingForce = 100
 	breakingTorque = 50
