New Nose Cone endcap

--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Aero_NoseCone_A.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Aero_NoseCone_A.cfg
@@ -8,10 +8,16 @@ PART
 	module = Part
 	author = Well
 	
-		MODEL
+	MODEL
 	{
 		model = Knes/Parts/Launcher/Ariane5/Knes_Aero_NoseCone_A
 	}
+	MODEL
+	{
+		model = Knes/Parts/Core/EndCap/Knes_end_basic_s1p5
+		scale = 1.0, -1.0, 1.0
+		position = 0.0, -0.88626, 0.0
+	}	
 	
 	rescaleFactor = 1
 	
