--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Engine_EPS.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Engine_EPS.cfg
@@ -12,7 +12,12 @@ PART
 	{
 		model = Knes/Parts/Launcher/Ariane5/Knes_Engine_EPS
 	}
-	
+	MODEL
+	{
+		model = Knes/Parts/Core/EndCap/Knes_end_basic_s2
+		scale = 1.5, 1.5, 1.5
+		position = 0.0, 0.7645, 0.0
+	}	
 	scale = 1	
 	rescaleFactor = 1
 	
