--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hera_Grapple.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hera_Grapple.cfg
@@ -9,11 +9,23 @@ PART
 	author = Well
 	
 	
-		MODEL
-		{
-			model = Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hera_Grapple
-		}
-
+	MODEL
+	{
+		model = Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hera_Grapple
+	}
+    MODEL
+	{
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
+		scale = 1.0, 1.0, 1.0
+		position = 0.0, 0.09, 0.0
+	}
+	MODEL
+	{
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
+		scale = 1.0, -1.0, 1.0
+		position = 0.0, -0.09, 0.0
+	}
+	
 	scale = 1
 	rescaleFactor = 0.95
 	CrewCapacity = 0
