--- a/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
+++ b/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
@@ -5,6 +5,10 @@ INTERNAL
 	{
 		model = Knes/Spaces/MultiRoleKapsule_IVA/_Knes_mrk_IVA
 	}
+	MODEL
+	{
+		model = Knes/Spaces/MultiRoleKapsule_IVA/_Knes_mrk_IVA_OverlayMask
+	}	
 	MODULE
 	{
 		name = InternalCameraSwitch
@@ -40,7 +44,7 @@ INTERNAL
 		name = InternalSeat
 		seatTransformName = kerbalSeat1
 		portraitCameraName = PilotCam1
-		allowCrewHelmet = true
+		allowCrewHelmet = false
 		kerbalEyeOffset = 0, 0.02, 0
 		displayseatName = #autoLoc_6002190
 	}
@@ -49,7 +53,7 @@ INTERNAL
 		name = InternalSeat
 		seatTransformName = kerbalSeat2
 		portraitCameraName = PilotCam2
-		allowCrewHelmet = true
+		allowCrewHelmet = false
 		kerbalEyeOffset = 0, 0.02, 0
 		displayseatName = #autoLoc_6002190
 	}
@@ -57,13 +61,13 @@ INTERNAL
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat3
-		allowCrewHelmet = true
+		allowCrewHelmet = false
 	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat4
-		allowCrewHelmet = true
+		allowCrewHelmet = false
 	}
 	PROP
 	{
