--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H8.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H8.cfg
@@ -27,7 +27,7 @@ PART
 	subcategory = 0
 	title = H8 "Taranis" Fuel Tanks
 	manufacturer = Knes
-	description = 
+	description = A 1.875 Fuel Tank for Ariane Rocket
 	attachRules = 1,1,1,1,0
 	mass = 1.125
 	
