--- a/GameData/Knes/Compatibility/Tweakscale/Knes-MultiRoleKapsule_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-MultiRoleKapsule_TweakScale.cfg
@@ -180,6 +180,15 @@
 	}
 }
 
+@PART[_Knes_Hermes_SolarPanel]:NEEDS[TweakScale]:FOR[Knes] // Callisto Solar Panel
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 0.625
+	}
+}
+
 @PART[_Knes_mrk_Thruster]:NEEDS[TweakScale]:FOR[Knes] // MRK-6f Thruster
 {
 	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
