--- a/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
+++ b/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
@@ -3,7 +3,7 @@
   !EFFECTS {}
   EFFECTS
   {
-    fx-fuji
+    running_closed
     {
 		AUDIO
 		{
@@ -32,11 +32,11 @@
     {
       AUDIO
       {
-        channel = Ship
-        clip = sound_vent_soft
-        volume = 1.0
-        pitch = 2.0
-        loop = false
+		channel = Ship
+		clip = Knes/Sounds/sound_rocket_ignition
+		volume = 1.1
+		pitch = 2.0
+		loop = false
       }
     }
     flameout
@@ -104,13 +104,119 @@
 
 
 	
+@PART[Knes_Engine_EPS]:NEEDS[Waterfall]:FOR[Knes]
+{
+  !EFFECTS {}
+  EFFECTS
+  {
+    running_closed
+    {
+		AUDIO
+		{
+			channel = Ship
+			clip = Knes/Sounds/sound_rocket_hard
+			volume = 0.0 0.0
+			volume = 1.0 1.5
+			pitch = 0.0 0.8
+			pitch = 1.0 1.2
+			loop = true
+		}
+		PREFAB_PARTICLE
+		{
+			prefabName = fx_smokeTrail_light
+			transformName = thrustTransform
+			emission = 0.0 0.0
+			emission = 0.05 0.0
+			emission = 0.075 0.25
+			emission = 1.0 1.25
+			speed = 0.0 0.25
+			speed = 1.0 1.0
+			localOffset = 0, 1, 0
+		}
+    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+    flameout
+    {
+      PREFAB_PARTICLE
+      {
+        prefabName = fx_exhaustSparks_flameout_2
+        transformName = thrustTransform
+        oneShot = true
+      }
+      AUDIO
+      {
+        channel = Ship
+        clip = sound_explosion_low
+        volume = 1.0
+        pitch = 2.0
+        loop = false
+      }
+    }
+  }
+  MODULE
+  {
+    name = ModuleWaterfallFX
+    // This is a custom name
+    moduleID = fujiFX
+    // This links the effects to a given ModuleEngines
+    engineID = Rutherford
+
+    // List out all controllers we want available
+    // This controller scales with atmosphere depth
+    CONTROLLER
+    {
+      name = atmosphereDepth
+      linkedTo = atmosphere_density
+    }
+    // This controller scales with effective throttle
+    CONTROLLER
+    {
+      name = throttle
+      linkedTo = throttle
+    }
+    // this controller generates a random value in the range specified
+    CONTROLLER
+    {
+      name = random
+      linkedTo = random
+      range = -1,1
+    }
+    // -----------------------------------------------------
+    // Past here should be generated with the ingame editor!
+    // -----------------------------------------------------
+    TEMPLATE
+    {
+      // This is the name of the template to use
+      templateName = waterfall-hydrolox-lower-1
+      // This field allows you to override the parentTransform name in the EFFECTS contained in the template
+      overrideParentTransform = thrustTransform
+		position = 0,0,-0.095
+		rotation = 0, 0, 0
+		scale = 0.65, 0.65, 0.6
+    }
+  }
+}
+
+
+
+	
 
 @PART[_Knes_L3S_L3S_HM60_Engine]:NEEDS[Waterfall]:FOR[Knes]
 {
   !EFFECTS {}
   EFFECTS
   {
-    fx-fuji
+    running_closed
     {
       AUDIO
       {
@@ -136,17 +242,17 @@
         localOffset = 0, 1, 0
       }
     }
-    engage
-    {
-      AUDIO
-      {
-        channel = Ship
-        clip = sound_vent_soft
-        volume = 1.0
-        pitch = 2.0
-        loop = false
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
     flameout
     {
       PREFAB_PARTICLE
@@ -218,7 +324,7 @@
   !EFFECTS {}
   EFFECTS
   {
-    fx-fuji
+    running_closed
     {
 		AUDIO
 		{
@@ -326,7 +432,7 @@
   !EFFECTS {}
   EFFECTS
   {
-    fx-fuji
+    running
     {
       AUDIO
       {
@@ -433,7 +539,7 @@
   !EFFECTS {}
   EFFECTS
   {
-    fx-fuji
+    running
     {
       AUDIO
       {
@@ -540,7 +646,7 @@
   !EFFECTS {}
   EFFECTS
   {
-    fx-fuji
+    running
     {
       AUDIO
       {
@@ -648,19 +754,17 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 0.5
-		pitch = 0.0 0.5
-		pitch = 1.0 1.0
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
     flameout
     {
       AUDIO
@@ -672,7 +776,7 @@
         loop = false
       }
     }
-    fx-puff-running
+    running
     {
       AUDIO
       {
@@ -743,19 +847,17 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 0.5
-		pitch = 0.0 0.5
-		pitch = 1.0 1.0
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
     flameout
     {
       AUDIO
@@ -767,7 +869,7 @@
         loop = false
       }
     }
-    fx-puff-running
+    running
     {
       AUDIO
       {
@@ -838,21 +940,43 @@
   !EFFECTS {}
   EFFECTS
   {
+		RCSFx
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = RCS
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.1 0.0
+				volume = 0.5 0.025
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCS
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}	  
     engage
     {
-      AUDIO
-      {
-		channel = Ship
-		transformName = RCS
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 0.1 0.0
-		volume = 0.5 0.025
-		volume = 1.0 0.1
-		pitch = 0.0 0.75
-		pitch = 1.0 1.5
-		loop = true
-      }
+		AUDIO
+		{
+			channel = Ship
+			clip = sound_vent_soft
+			volume = 1.0
+			pitch = 2.0
+			loop = false
+		}
     }
     flameout
     {
@@ -865,7 +989,7 @@
         loop = false
       }
     }
-    fx-puff-running
+    running
     {
       AUDIO
       {
@@ -936,19 +1060,17 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 0.3
-		pitch = 0.0 0.75
-		pitch = 1.0 1.5
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
     flameout
     {
       AUDIO
@@ -960,20 +1082,18 @@
         loop = false
       }
     }
-    fx-puff-running
+    running
     {
-      AUDIO
-      {
-        channel = Ship
-        clip = sound_rocket_mini
-        volume = 0.0 0.0
-        volume = 0.01 0.2
-        volume = 1.0 0.6
-        pitch = 0.0 0.1
-        pitch = 0.01 0.2
-        pitch = 1.0 0.5
-        loop = true
-      }
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 1.0 0.3
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
     }
   }
   MODULE
@@ -1031,19 +1151,17 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 0.3
-		pitch = 0.0 0.75
-		pitch = 1.0 1.5
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
     flameout
     {
       AUDIO
@@ -1055,7 +1173,7 @@
         loop = false
       }
     }
-    fx-puff-running
+    running
     {
       AUDIO
       {
@@ -1127,19 +1245,17 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 0.3
-		pitch = 0.0 0.75
-		pitch = 1.0 1.5
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
     flameout
     {
       AUDIO
@@ -1151,7 +1267,7 @@
         loop = false
       }
     }
-    fx-puff-running
+    running
     {
       AUDIO
       {
@@ -1222,19 +1338,17 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 0.3
-		pitch = 0.0 0.75
-		pitch = 1.0 1.5
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
     flameout
     {
       AUDIO
@@ -1246,7 +1360,7 @@
         loop = false
       }
     }
-    fx-puff-running
+    running
     {
       AUDIO
       {
@@ -1317,19 +1431,17 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 0.3
-		pitch = 0.0 0.75
-		pitch = 1.0 1.5
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
     flameout
     {
       AUDIO
@@ -1341,7 +1453,7 @@
         loop = false
       }
     }
-    fx-puff-running
+    running
     {
       AUDIO
       {
@@ -1412,30 +1524,24 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.8
-		pitch = 1.0 1.0
-		loop = true
-      }
-    }
-    disengage
-    {
-      AUDIO
-      {
-        channel = Ship
-        clip = sound_vent_soft
-        volume = 1.0
-        pitch = 2.0
-        loop = false
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_medium
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
     flameout
     {
       PREFAB_PARTICLE
@@ -1453,7 +1559,7 @@
         loop = false
       }
     }
-    fx-reliant-running
+    running
     {
        AUDIO
       {
@@ -1467,18 +1573,21 @@
         pitch = 1.0 1.8
         loop = true
       }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 0, 0
-      }
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 1
+				// localScale = 1, 1, 1
+			}
     }
   }
   MODULE
@@ -1537,30 +1646,24 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.8
-		pitch = 1.0 1.0
-		loop = true
-      }
-    }
-    disengage
-    {
-      AUDIO
-      {
-        channel = Ship
-        clip = sound_vent_soft
-        volume = 1.0
-        pitch = 2.0
-        loop = false
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_medium
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
     flameout
     {
       PREFAB_PARTICLE
@@ -1578,32 +1681,33 @@
         loop = false
       }
     }
-    fx-reliant-running
+    running
     {
-       AUDIO
-      {
-        channel = Ship
-        clip = sound_rocket_hard
-        volume = 0.0 0.0
-        volume = 0.01 0.4
-        volume = 1.0 1.0
-        pitch = 0.0 0.2
-        pitch = 0.01 0.6
-        pitch = 1.0 1.8
-        loop = true
-      }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 0, 0
-      }
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.8
+				pitch = 1.0 1.0
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 1
+				// localScale = 1, 1, 1
+			}
     }
   }
   MODULE
@@ -1662,19 +1766,17 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = sound_rocket_mini
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.8
-		pitch = 1.0 1.0
-		loop = true
-      }
-    }
+        engage
+        {
+            AUDIO
+            {
+                channel = Ship
+                clip = sound_vent_soft
+                volume = 1.0
+                pitch = 2.0
+                loop = false
+            }
+        }
     disengage
     {
       AUDIO
@@ -1703,20 +1805,18 @@
         loop = false
       }
     }
-    fx-reliant-running
+    running
     {
-       AUDIO
-      {
-        channel = Ship
-        clip = sound_rocket_hard
-        volume = 0.0 0.0
-        volume = 0.01 0.4
-        volume = 1.0 1.0
-        pitch = 0.0 0.2
-        pitch = 0.01 0.6
-        pitch = 1.0 1.8
-        loop = true
-      }
+            AUDIO
+            {
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.8
+				pitch = 1.0 1.0
+				loop = true
+            }
       PREFAB_PARTICLE
       {
         prefabName = fx_smokeTrail_light
@@ -1787,17 +1887,15 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-        channel = Ship
-        clip = sound_vent_medium
-        volume = 1.0
-        pitch = 2.0
-        loop = false
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				loop = false
+			}
+		}
     disengage
     {
       AUDIO
@@ -1826,7 +1924,7 @@
         loop = false
       }
     }
-    fx-reliant-running
+    running
     {
        AUDIO
       {
@@ -1908,19 +2006,15 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = Knes/Sounds/sound_rocket_normal
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.8
-		pitch = 1.0 1.0
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				loop = false
+			}
+		}
     disengage
     {
       AUDIO
@@ -1949,7 +2043,7 @@
         loop = false
       }
     }
-    fx-reliant-running
+    running
     {
        AUDIO
       {
@@ -2033,19 +2127,15 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = Knes/Sounds/sound_rocket_normal
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.8
-		pitch = 1.0 1.0
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				loop = false
+			}
+		}
     disengage
     {
       AUDIO
@@ -2074,20 +2164,18 @@
         loop = false
       }
     }
-    fx-reliant-running
+    running
     {
-       AUDIO
-      {
-        channel = Ship
-        clip = sound_rocket_hard
-        volume = 0.0 0.0
-        volume = 0.01 0.4
-        volume = 1.0 1.0
-        pitch = 0.0 0.2
-        pitch = 0.01 0.6
-        pitch = 1.0 1.8
-        loop = true
-      }
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_normal
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.8
+				pitch = 1.0 1.0
+				loop = true
+			}
       PREFAB_PARTICLE
       {
         prefabName = fx_smokeTrail_light
@@ -2156,19 +2244,15 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = Knes/Sounds/sound_rocket_hard
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.8
-		pitch = 1.0 1.0
-		loop = true
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				loop = false
+			}
+		}
     disengage
     {
       AUDIO
@@ -2197,32 +2281,33 @@
         loop = false
       }
     }
-    fx-reliant-running
+    running
     {
-       AUDIO
-      {
-        channel = Ship
-        clip = sound_rocket_hard
-        volume = 0.0 0.0
-        volume = 0.01 0.4
-        volume = 1.0 1.0
-        pitch = 0.0 0.2
-        pitch = 0.01 0.6
-        pitch = 1.0 1.8
-        loop = true
-      }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 0, 0
-      }
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.8
+				pitch = 1.0 1.0
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = Smoke
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.4
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 7
+				localScale = 1.5, 1.5, 1.5
+			}
     }
   }
   MODULE
@@ -2279,30 +2364,24 @@
   !EFFECTS {}
   EFFECTS
   {
-    engage
-    {
-      AUDIO
-      {
-		channel = Ship
-		clip = Knes/Sounds/sound_rocket_normal
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.8
-		pitch = 1.0 1.0
-		loop = true
-      }
-    }
-    disengage
-    {
-      AUDIO
-      {
-        channel = Ship
-        clip = sound_vent_soft
-        volume = 1.0
-        pitch = 2.0
-        loop = false
-      }
-    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
     flameout
     {
       PREFAB_PARTICLE
@@ -2320,20 +2399,18 @@
         loop = false
       }
     }
-    fx-reliant-running
+    running
     {
-       AUDIO
-      {
-        channel = Ship
-        clip = sound_rocket_hard
-        volume = 0.0 0.0
-        volume = 0.01 0.4
-        volume = 1.0 1.0
-        pitch = 0.0 0.2
-        pitch = 0.01 0.6
-        pitch = 1.0 1.8
-        loop = true
-      }
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_normal
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.8
+				pitch = 1.0 1.0
+				loop = true
+			}
       PREFAB_PARTICLE
       {
         prefabName = fx_smokeTrail_light
