--- a/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
+++ b/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
@@ -1817,18 +1817,6 @@
 				pitch = 1.0 1.0
 				loop = true
             }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 0, 0
-      }
     }
   }
   MODULE
@@ -1935,18 +1923,6 @@
 		pitch = 0.0 1.0
 		pitch = 1.0 1.5
 		loop = true
-      }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 0, 0
       }
     }
   }
@@ -2057,18 +2033,6 @@
         pitch = 1.0 1.8
         loop = true
       }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 0, 0
-      }
     }
   }
   MODULE
@@ -2176,18 +2140,19 @@
 				pitch = 1.0 1.0
 				loop = true
 			}
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 0, 0
-      }
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_light
+				transformName = thrustTransformFX
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0.5
+				localRotation = 1, 0, 0, -90
+			}	
     }
   }
   MODULE
@@ -2411,18 +2376,6 @@
 				pitch = 1.0 1.0
 				loop = true
 			}
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 0, 0
-      }
     }
   }
   MODULE
@@ -2467,4 +2420,746 @@
 		scale = 0.72, 0.72, 0.6
     }
   }
+}
+
+
+
+
+
+
+
+
+@PART[_Knes_L3S_L140]:NEEDS[Waterfall]:FOR[Knes]
+{
+  !EFFECTS {}
+    EFFECTS
+  {
+    running
+    {
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.5
+				pitch = 0.0 0.3
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.3
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 15
+				localScale = 1.2, 1.2, 1.2
+			}
+		
+    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
+    flameout
+    {
+      PREFAB_PARTICLE
+      {
+        prefabName = fx_exhaustSparks_flameout_2
+        transformName = thrustTransform
+        oneShot = true
+      }
+      AUDIO
+      {
+        channel = Ship
+        clip = sound_explosion_low
+        volume = 1.0
+        pitch = 2.0
+        loop = false
+      }
+    }
+  }
+  MODULE
+  {
+    name = ModuleWaterfallFX
+    // This is a custom name
+    moduleID = arianeFX
+    // This links the effects to a given ModuleEngines
+    engineID = MainNozzles
+
+    // List out all controllers we want available
+    // This controller scales with atmosphere depth
+    CONTROLLER
+    {
+      name = atmosphereDepth
+      linkedTo = atmosphere_density
+    }
+    // This controller scales with effective throttle
+    CONTROLLER
+    {
+      name = throttle
+      linkedTo = throttle
+    }
+    // this controller generates a random value in the range specified
+    CONTROLLER
+    {
+      name = random
+      linkedTo = random
+      range = -1,1
+    }
+    // -----------------------------------------------------
+    // Past here should be generated with the ingame editor!
+    // -----------------------------------------------------
+    TEMPLATE
+    {
+      // This is the name of the template to use
+      templateName = waterfall-ariane
+      // This field allows you to override the parentTransform name in the EFFECTS contained in the template
+      overrideParentTransform = thrustTransform
+		position = 0,0,0
+		rotation = 0, 0, 0
+		scale = 0.43, 0.43, 0.5
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+@PART[_Knes_L3S_Engine_Viking5]:NEEDS[Waterfall]:FOR[Knes]
+{
+  !EFFECTS {}
+    EFFECTS
+  {
+    running
+    {
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.5
+				pitch = 0.0 0.3
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.3
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 15
+				localScale = 1.2, 1.2, 1.2
+			}
+		
+    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
+    flameout
+    {
+      PREFAB_PARTICLE
+      {
+        prefabName = fx_exhaustSparks_flameout_2
+        transformName = thrustTransform
+        oneShot = true
+      }
+      AUDIO
+      {
+        channel = Ship
+        clip = sound_explosion_low
+        volume = 1.0
+        pitch = 2.0
+        loop = false
+      }
+    }
+  }
+  MODULE
+  {
+    name = ModuleWaterfallFX
+    // This is a custom name
+    moduleID = arianeFX
+    // This links the effects to a given ModuleEngines
+    engineID = MainNozzles
+
+    // List out all controllers we want available
+    // This controller scales with atmosphere depth
+    CONTROLLER
+    {
+      name = atmosphereDepth
+      linkedTo = atmosphere_density
+    }
+    // This controller scales with effective throttle
+    CONTROLLER
+    {
+      name = throttle
+      linkedTo = throttle
+    }
+    // this controller generates a random value in the range specified
+    CONTROLLER
+    {
+      name = random
+      linkedTo = random
+      range = -1,1
+    }
+    // -----------------------------------------------------
+    // Past here should be generated with the ingame editor!
+    // -----------------------------------------------------
+    TEMPLATE
+    {
+      // This is the name of the template to use
+      templateName = waterfall-ariane
+      // This field allows you to override the parentTransform name in the EFFECTS contained in the template
+      overrideParentTransform = thrustTransform
+		position = 0,0,-0.46
+		rotation = 0, 0, 0
+		scale = 0.4, 0.4, 0.5
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+@PART[_Knes_L3S_L220]:NEEDS[Waterfall]:FOR[Knes]
+{
+  !EFFECTS {}
+    EFFECTS
+  {
+    running
+    {
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.5
+				pitch = 0.0 0.3
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.3
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 15
+				localScale = 1.2, 1.2, 1.2
+			}
+		
+    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
+    flameout
+    {
+      PREFAB_PARTICLE
+      {
+        prefabName = fx_exhaustSparks_flameout_2
+        transformName = thrustTransform
+        oneShot = true
+      }
+      AUDIO
+      {
+        channel = Ship
+        clip = sound_explosion_low
+        volume = 1.0
+        pitch = 2.0
+        loop = false
+      }
+    }
+  }
+  MODULE
+  {
+    name = ModuleWaterfallFX
+    // This is a custom name
+    moduleID = arianeFX
+    // This links the effects to a given ModuleEngines
+    engineID = MainNozzles
+
+    // List out all controllers we want available
+    // This controller scales with atmosphere depth
+    CONTROLLER
+    {
+      name = atmosphereDepth
+      linkedTo = atmosphere_density
+    }
+    // This controller scales with effective throttle
+    CONTROLLER
+    {
+      name = throttle
+      linkedTo = throttle
+    }
+    // this controller generates a random value in the range specified
+    CONTROLLER
+    {
+      name = random
+      linkedTo = random
+      range = -1,1
+    }
+    // -----------------------------------------------------
+    // Past here should be generated with the ingame editor!
+    // -----------------------------------------------------
+    TEMPLATE
+    {
+      // This is the name of the template to use
+      templateName = waterfall-ariane-4
+      // This field allows you to override the parentTransform name in the EFFECTS contained in the template
+      overrideParentTransform = thrustTransform
+		position = 0,0,0.08
+		rotation = 0, 0, 0
+		scale = 0.42, 0.42, 0.5
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+@PART[_Knes_L3S_L220N]:NEEDS[Waterfall]:FOR[Knes]
+{
+  !EFFECTS {}
+    EFFECTS
+  {
+    running
+    {
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.5
+				pitch = 0.0 0.3
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.3
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 15
+				localScale = 1.2, 1.2, 1.2
+			}
+		
+    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
+    flameout
+    {
+      PREFAB_PARTICLE
+      {
+        prefabName = fx_exhaustSparks_flameout_2
+        transformName = thrustTransform
+        oneShot = true
+      }
+      AUDIO
+      {
+        channel = Ship
+        clip = sound_explosion_low
+        volume = 1.0
+        pitch = 2.0
+        loop = false
+      }
+    }
+  }
+  MODULE
+  {
+    name = ModuleWaterfallFX
+    // This is a custom name
+    moduleID = arianeFX
+    // This links the effects to a given ModuleEngines
+    engineID = MainNozzles
+
+    // List out all controllers we want available
+    // This controller scales with atmosphere depth
+    CONTROLLER
+    {
+      name = atmosphereDepth
+      linkedTo = atmosphere_density
+    }
+    // This controller scales with effective throttle
+    CONTROLLER
+    {
+      name = throttle
+      linkedTo = throttle
+    }
+    // this controller generates a random value in the range specified
+    CONTROLLER
+    {
+      name = random
+      linkedTo = random
+      range = -1,1
+    }
+    // -----------------------------------------------------
+    // Past here should be generated with the ingame editor!
+    // -----------------------------------------------------
+    TEMPLATE
+    {
+      // This is the name of the template to use
+      templateName = waterfall-ariane-4
+      // This field allows you to override the parentTransform name in the EFFECTS contained in the template
+      overrideParentTransform = thrustTransform
+		position = 0,0,0.08
+		rotation = 0, 0, 0
+		scale = 0.42, 0.42, 0.5
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+@PART[_Knes_L3S_PAL]:NEEDS[Waterfall]:FOR[Knes]
+{
+  !EFFECTS {}
+    EFFECTS
+  {
+    running
+    {
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.5
+				pitch = 0.0 0.3
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.3
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 15
+				localScale = 1.2, 1.2, 1.2
+			}
+		
+    }
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
+    flameout
+    {
+      PREFAB_PARTICLE
+      {
+        prefabName = fx_exhaustSparks_flameout_2
+        transformName = thrustTransform
+        oneShot = true
+      }
+      AUDIO
+      {
+        channel = Ship
+        clip = sound_explosion_low
+        volume = 1.0
+        pitch = 2.0
+        loop = false
+      }
+    }
+  }
+  MODULE
+  {
+    name = ModuleWaterfallFX
+    // This is a custom name
+    moduleID = arianeFX
+    // This links the effects to a given ModuleEngines
+    engineID = MainNozzles
+
+    // List out all controllers we want available
+    // This controller scales with atmosphere depth
+    CONTROLLER
+    {
+      name = atmosphereDepth
+      linkedTo = atmosphere_density
+    }
+    // This controller scales with effective throttle
+    CONTROLLER
+    {
+      name = throttle
+      linkedTo = throttle
+    }
+    // this controller generates a random value in the range specified
+    CONTROLLER
+    {
+      name = random
+      linkedTo = random
+      range = -1,1
+    }
+    // -----------------------------------------------------
+    // Past here should be generated with the ingame editor!
+    // -----------------------------------------------------
+    TEMPLATE
+    {
+      // This is the name of the template to use
+      templateName = waterfall-ariane-4
+      // This field allows you to override the parentTransform name in the EFFECTS contained in the template
+      overrideParentTransform = thrustTransform
+		position = 0,0,0
+		rotation = 0, 0, 0
+		scale = 0.44, 0.44, 0.5
+    }
+  }
+}
+
+
+
+
+
+
+@PART[_Knes_L3S_L33_Engine]:FOR[Knes]
+{
+
+  !EFFECTS {}
+  EFFECTS
+  {
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_ignition
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
+    flameout
+    {
+      PREFAB_PARTICLE
+      {
+        prefabName = fx_exhaustSparks_flameout_2
+        transformName = thrustTransform
+        oneShot = true
+      }
+      AUDIO
+      {
+        channel = Ship
+        clip = sound_explosion_low
+        volume = 1.0
+        pitch = 2.0
+        loop = false
+      }
+    }
+    running
+    {
+			AUDIO
+			{
+				channel = Ship
+				clip = Knes/Sounds/sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.8
+				pitch = 1.0 1.0
+				loop = true
+			}
+     
+      PREFAB_PARTICLE
+      {
+        prefabName = fx_smokeTrail_veryLarge
+        transformName = thrustTransform
+        emission = 0.0 0.0
+        emission = 0.05 0.0
+        emission = 0.075 0.25
+        emission = 1.0 1.25
+        speed = 0.0 0.25
+        speed = 1.0 1.0
+        localOffset = 0, 0, 1
+      }
+    }
+  }
+  MODULE
+  {
+    name = ModuleWaterfallFX
+    // This is a custom name
+    moduleID = skipperFX
+    // This links the effects to a given ModuleEngines
+    engineID = basicEngine
+
+    // List out all controllers we want available
+    // This controller scales with atmosphere depth
+    CONTROLLER
+    {
+      name = atmosphereDepth
+      linkedTo = atmosphere_density
+    }
+    // This controller scales with effective throttle
+    CONTROLLER
+    {
+      name = throttle
+      linkedTo = throttle
+    }
+    // this controller generates a random value in the range specified
+    CONTROLLER
+    {
+      name = random
+      linkedTo = random
+      range = -1,1
+    }
+    // -----------------------------------------------------
+    // Past here should be generated with the ingame editor!
+    // -----------------------------------------------------
+    TEMPLATE
+    {
+      // This is the name of the template to use
+      templateName = waterfall-kerolox-sustainer-1
+      // This field allows you to override the parentTransform name in the EFFECTS contained in the template
+      overrideParentTransform = thrustTransform
+		position = 0,0,-0.55
+		rotation = 0, 0, 0
+		scale = 2, 2, 1
+    }
+
+
+  }
+ 
 }
