--- a/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
+++ b/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
@@ -15,18 +15,18 @@
 			pitch = 1.0 1.2
 			loop = true
 		}
-		PREFAB_PARTICLE
-		{
-			prefabName = fx_smokeTrail_light
-			transformName = thrustTransform
-			emission = 0.0 0.0
-			emission = 0.05 0.0
-			emission = 0.075 0.25
-			emission = 1.0 1.25
-			speed = 0.0 0.25
-			speed = 1.0 1.0
-			localOffset = 0, 1, 0
-		}
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_light
+				transformName = smokePoint
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0
+			}
     }
     engage
     {
@@ -120,18 +120,6 @@
 			pitch = 0.0 0.8
 			pitch = 1.0 1.2
 			loop = true
-		}
-		PREFAB_PARTICLE
-		{
-			prefabName = fx_smokeTrail_light
-			transformName = thrustTransform
-			emission = 0.0 0.0
-			emission = 0.05 0.0
-			emission = 0.075 0.25
-			emission = 1.0 1.25
-			speed = 0.0 0.25
-			speed = 1.0 1.0
-			localOffset = 0, 1, 0
 		}
     }
 		engage
@@ -229,18 +217,6 @@
 		pitch = 1.0 2.0
 		loop = true
       }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 1, 0
-      }
     }
 		engage
 		{
@@ -337,18 +313,6 @@
 			pitch = 1.0 2.0
 			loop = true
 		}
-		PREFAB_PARTICLE
-		{
-			prefabName = fx_smokeTrail_light
-			transformName = thrustTransform
-			emission = 0.0 0.0
-			emission = 0.05 0.0
-			emission = 0.075 0.25
-			emission = 1.0 1.25
-			speed = 0.0 0.25
-			speed = 1.0 1.0
-			localOffset = 0, 1, 0
-		}
     }
     engage
     {
@@ -443,18 +407,6 @@
 		pitch = 0.0 0.75
 		pitch = 1.0 1.5
 		loop = true
-      }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 1, 0
       }
     }
     engage
@@ -551,18 +503,6 @@
 		pitch = 1.0 1.5
 		loop = true
       }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 1, 0
-      }
     }
     engage
     {
@@ -657,18 +597,6 @@
 		pitch = 0.0 0.75
 		pitch = 1.0 1.5
 		loop = true
-      }
-      PREFAB_PARTICLE
-      {
-        prefabName = fx_smokeTrail_light
-        transformName = thrustTransform
-        emission = 0.0 0.0
-        emission = 0.05 0.0
-        emission = 0.075 0.25
-        emission = 1.0 1.25
-        speed = 0.0 0.25
-        speed = 1.0 1.0
-        localOffset = 0, 1, 0
       }
     }
     engage
