--- a/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
+++ b/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
@@ -106,6 +106,10 @@
 	
 @PART[Knes_Engine_EPS]:NEEDS[Waterfall]:FOR[Knes]
 {
+  !fx_exhaustFlame_blue_small = 0.0, -0.0, 0.0, 0.0, 1.0, 0.0, running
+  !fx_exhaustLight_blue = 0.0, -0.0, 0.0, 0.0, 0.0, 1.0, running
+  !fx_smokeTrail_light = 0.0, -0.0, 0.0, 0.0, 1.0, 0.0, running
+
   !EFFECTS {}
   EFFECTS
   {
