--- a/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
+++ b/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
@@ -3053,9 +3053,9 @@
   {
     name = ModuleWaterfallFX
     // This is a custom name
-    moduleID = skipperFX
+    moduleID = arianeFX
     // This links the effects to a given ModuleEngines
-    engineID = basicEngine
+    engineID = MainNozzles
 
     // List out all controllers we want available
     // This controller scales with atmosphere depth
@@ -3083,15 +3083,12 @@
     TEMPLATE
     {
       // This is the name of the template to use
-      templateName = waterfall-kerolox-sustainer-1
+      templateName = waterfall-ariane-4
       // This field allows you to override the parentTransform name in the EFFECTS contained in the template
       overrideParentTransform = thrustTransform
-		position = 0,0,-0.55
+		position = 0,0,-0.01
 		rotation = 0, 0, 0
-		scale = 2, 2, 1
+		scale = 0.68, 0.68, 0.7
     }
-
-
   }
- 
 }
