--- a/GameData/Knes/Compatibility/Waterfall/waterfall-ariane-4.cfg
+++ b/GameData/Knes/Compatibility/Waterfall/waterfall-ariane-4.cfg
@@ -293,17 +293,17 @@ EFFECTTEMPLATE
 				FLOAT
 				{
 					floatName = _ExpandBounded
-					value = 0.303332865
+					value = 0.202221915
 				}
 				FLOAT
 				{
 					floatName = _ExpandLinear
-					value = 0
+					value = 0.4044438
 				}
 				FLOAT
 				{
 					floatName = _ExpandSquare
-					value = -0.60666573
+					value = -0.909998596
 				}
 				FLOAT
 				{
@@ -2189,39 +2189,39 @@ EFFECTTEMPLATE
 				TEXTURE
 				{
 					textureSlotName = _MainTex
-					texturePath = Waterfall/FX/fx-noise-1
+					texturePath = Waterfall/FX/fx-noise-4
 					textureScale = 1,1
 					textureOffset = 0,0
 				}
 				COLOR
 				{
 					colorName = _StartTint
-					colorValue = 0.0705882385,0.482352942,0.945098042,1
+					colorValue = 0.380392164,0.729411781,0.968627453,0.87684983
 				}
 				COLOR
 				{
 					colorName = _EndTint
-					colorValue = 0.945098042,0.725490212,0.650980413,1
+					colorValue = 0.980392158,0.568627477,0.392156869,1
 				}
 				FLOAT
 				{
 					floatName = _ExpandSquare
-					value = -1.51666439
+					value = -4.54999304
 				}
 				FLOAT
 				{
 					floatName = _ExpandOffset
-					value = 0.101110928
+					value = 0.101110935
 				}
 				FLOAT
 				{
 					floatName = _ExpandBounded
-					value = 1.51666427
+					value = 10
 				}
 				FLOAT
 				{
 					floatName = _ExpandLinear
-					value = 0.202222362
+					value = 0.900014162
 				}
 				FLOAT
 				{
@@ -2241,7 +2241,7 @@ EFFECTTEMPLATE
 				FLOAT
 				{
 					floatName = _FadeOut
-					value = 0.161777526
+					value = 0.879166067
 				}
 				FLOAT
 				{
@@ -2271,7 +2271,7 @@ EFFECTTEMPLATE
 				FLOAT
 				{
 					floatName = _Noise
-					value = 15
+					value = 6.12751389
 				}
 				FLOAT
 				{
@@ -2291,12 +2291,12 @@ EFFECTTEMPLATE
 				FLOAT
 				{
 					floatName = _FresnelInvert
-					value = 0
+					value = 0.454999298
 				}
 				FLOAT
 				{
 					floatName = _TintFalloff
-					value = 0
+					value = 5
 				}
 			}
 		}
